opam-version: "2.0"
name: "combo"
version: "0.1"
maintainer: "yul3n"
authors: "yul3n"
homepage: "https://github.com/Yul3n/combo"
license: "BSD-3"
bug-reports: "https://github.com/Yul3n/combo/issues"
synopsis: "A simple parser combinator library for Ocaml"
description: "Combo is a simple parser combinator library for Ocaml providing
common parsers and combinators."
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]
